eureka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 8000
    port: 80
